Fixes dead links by changing logo z-index.

--- a/main.css
+++ b/main.css
@@ -11,6 +11,7 @@ body {
     position: absolute;
     top: 100px;
     left: 60px;
+    z-index: -1;
 }
 
 h1 {
@@ -41,6 +42,7 @@ nav li a {
     text-decoration: none;
     font-size: 16pt;
     padding: 20px;
+    
 }
 
 nav li a:hover {
@@ -49,6 +51,7 @@ nav li a:hover {
 
 li a:link {
 color: #200088;
+
 }
 
 li a:hover {
